# sentinel

./: AGENTS.md  Cargo.toml  README.md  progress.md
docs/: 2602180855_brainstorm_policy_enforcement_authorization.typ  2602181244_epic_sentinel_library.typ  2602181508_spec_model_and_types.md  2602182248_spec_policy_aggregate.md  2606100155_spec_pep_evaluate_scope.md  2606100232_plan_pep_evaluate_scope.md  2606100426_positioning_differentiators_and_roadmap.md  _template.typ
sentinel/: Cargo.toml
sentinel/examples/: org-scoped-access.rs  ownership.rs
sentinel/src/: lib.rs
sentinel_core/: Cargo.toml
sentinel_core/src/: aggregate.rs  lib.rs  time_travel.rs
sentinel_derive/: Cargo.toml
sentinel_derive/src/: lib.rs
