[package]
name = "sentinel"
description = "NGAC-inspired policy enforcement library for Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
sentinel_core = { path = "../sentinel_core", version = "0.1.0" }
sentinel_derive = { path = "../sentinel_derive", optional = true, version = "0.1.0" }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }

[features]
default = ["derive"]
derive = ["sentinel_derive"]

