[package]
name = "sentinel_core"
description = "Core graph model, traits, and policy evaluation for sentinel"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0"
