[package]
name = "sentinel_core"
description = "Core graph model, traits, and policy evaluation for sentinel"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4", "macro-diagnostics"] }
epoch_core = { git = "https://github.com/Istar-Eldritch/epoch.git", version = "0.1.0", rev = "ddf4afc" }
epoch_derive = { git = "https://github.com/Istar-Eldritch/epoch.git", version = "0.1.0", rev = "ddf4afc" }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
epoch_mem = { git = "https://github.com/Istar-Eldritch/epoch.git", version = "0.1.0", rev = "ddf4afc" }
