[package]
name = "sentinel_core"
description = "Core graph model, traits, and policy evaluation for sentinel"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.17.0", features = ["serde", "v4", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
epoch_core = { git = "file:///root/code/epoch", version = "0.1.0", rev = "251f665" }
epoch_derive = { git = "file:///root/code/epoch", version = "0.1.0", rev = "251f665" }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
epoch_mem = { git = "file:///root/code/epoch", version = "0.1.0", rev = "251f665" }
